Fix x-axis overflow problem with the joy grids

--- a/src/Game.css
+++ b/src/Game.css
@@ -1,3 +1,7 @@
+.Game {
+  overflow-x: hidden;
+}
+
 .Sub-Button {
   width: 100%;
   display: flex;
